# CSFML-Pexeso

./: .gitignore  CMakeLists.txt  README.md  main.c
src/GameLogic/: Game.c  Game.h  Pexeso.c  Pexeso.h  PexesoGrid.c  PexesoGrid.h  PexesoPairs.c  PexesoPairs.h
src/Networking/Client/: CMakeLists.txt  client.c  save
src/Networking/Server/: CMakeLists.txt  server.c  server.h
src/Rules/: Rules.c  Rules.h
src/UI/: screens.h  window.c  window.h
src/UI/Components/: Setters.c  Setters.h  button.c  button.h  header.c  header.h  label.c  label.h
